--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <header class="header">
     <div class="container">
         <div>
-            <img src="./images/Logo.png" alt="logo">
+            <img class="logo" src="./images/Logo.png" alt="logo">
         </div>
         <nav> 
             <span class="mobile-button">
@@ -20,16 +20,16 @@
             </span>
             <ul class="navigation">
                 <li>
-                    <a href="#" class="navigation__item">Home</a>
+                    <a href="#" class="navigation__item">HOME</a>
                 </li>
                 <li>
-                    <a href="#" class="navigation__item">About</a>
+                    <a href="#" class="navigation__item">ABOUT</a>
                 </li>
                 <li>
-                    <a href="#" class="navigation__item">Shop</a>
+                    <a href="#" class="navigation__item">SHOP</a>
                 </li>
                 <li>
-                    <a href="#" class="navigation__item">Contact</a>
+                    <a href="#" class="navigation__item">CONTACT</a>
                 </li>   
             </ul>
         </nav>
@@ -37,7 +37,9 @@
 </header> 
   <section class="main">
     <div class="container">
-         <img src="./images/SPORT1.png" alt="Sport">
+         
+        <img class="SPORT1" src="./images/SPORT1.png" alt="Sport">
+           
             <div class="pmain">
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -379,9 +381,9 @@
                                 </ul>
                         </div>
                     </div>
-                    <div class="row33">
+                    <div class="row">
                         <div class="col33">
-                            <h4>ABOUT</h4>
+                            <h4 class="h4about">ABOUT</h4>
                                 <ul>
                                     <li>
                                         Team
@@ -402,9 +404,9 @@
                                 </ul>
                         </div>
                     </div>
-                    <div class="row33">
+                    <div class="row">
                         <div class="col33">
-                            <h4>ABOUT</h4>
+                            <h4 class="h4about">ABOUT</h4>
                                 <ul>
                                     <li>
                                         Team
